--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "live-server --port=3000"
+    "start": "live-server --port=3000",
+    "build": "parcel build index.html"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
